--- a/css/Bem/activitat1.html
+++ b/css/Bem/activitat1.html
@@ -4,9 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    max-width: 100%;
+    height: auto;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+}
+
+nav li {
+    margin-right: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+}
+
+.cerca form {
+    display: flex;
+}
+
+.cerca input {
+    padding: 5px;
+    margin-right: 5px;
+}
+
+.cerca button {
+    padding: 6px;
+    background-color: #ddd;
+    border: none;
+    cursor: pointer;
+}
+
+    </style>
 </head>
 <body>
-    <header class="header"></header>
+    <!DOCTYPE html>
+<html lang="ca">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estils.css">
+    <title>La Meva Pàgina Web</title>
+</head>
+<body>
+
+<header>
+    <div class="logo">
+        <img src="img/Instagram_icon.png.webp" alt="Instagram" width="50" height="50">
+    </div>
+    <div class="cerca">
+        <form action="#" method="get">
+            <input type="text" name="q" placeholder="Cercar...">
+            <button type="submit">Cercar</button>
+        </form>
+    </div>
+</header><br>
+<a href="../exerciciscss.html">Tornar a les activitats</a>
+</body>
+</html>
+
     
 </body>
 </html>
