--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -16,5 +16,6 @@
     <a href="Variables/activitat2.html">activitat2</a><br>
     <h2>Bem</h2>
     <a href="Bem/activitat1.html">activitat1</a><br>
+    <a href="Bem/activitat2.html">activitat2</a><br>
 </body>
 </html>
