--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -17,5 +17,7 @@
     <h2>Bem</h2>
     <a href="Bem/activitat1.html">activitat1</a><br>
     <a href="Bem/activitat2.html">activitat2</a><br>
+    <h2>Color</h2>
+    <a href="Color/activitat1.html">activitat1</a><br>
 </body>
 </html>
