--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -19,5 +19,6 @@
     <a href="Bem/activitat2.html">activitat2</a><br>
     <h2>Color</h2>
     <a href="Color/activitat1.html">activitat1</a><br>
+    <a href="Color/activitat2.html">activitat2</a><br>
 </body>
 </html>
