--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -20,5 +20,8 @@
     <h2>Color</h2>
     <a href="Color/activitat1.html">activitat1</a><br>
     <a href="Color/activitat2.html">activitat2</a><br>
+    <a href="Color/activitat3.html">activitat3</a><br>
+    <h2>Imagenes</h2>
+    <a href="Imagenes/activitat1.html">activitat1</a><br>
 </body>
 </html>
