--- a/css/exerciciscss.html
+++ b/css/exerciciscss.html
@@ -23,5 +23,6 @@
     <a href="Color/activitat3.html">activitat3</a><br>
     <h2>Imagenes</h2>
     <a href="Imagenes/activitat1.html">activitat1</a><br>
+    <a href="Imagenes/activitat2.html">activitat2</a><br>
 </body>
 </html>
