Activitat RSS, Atom, i canals de contingut

--- a/totesactivitats.html
+++ b/totesactivitats.html
@@ -29,6 +29,7 @@
         <ul>
             <li><a href="html/exercicishtml.html">Exercicis HTML</a></li>
             <li><a href="css/exerciciscss.html">Exercicis CSS</a></li>
+            <li><a href="rss/exercicisrss.html">Exercicis RSS</a></li>
         </ul>
         <div class="imatgecentrada">
             <img src="img/html1.png" alt="Victor" width="600" height="600">
