--- a/rss/exercicisrss.html
+++ b/rss/exercicisrss.html
@@ -7,7 +7,7 @@
     <title>Notícies d'informàtica</title>
 </head>
 <body>
-    <h1>Notícies RSS</h1>
+    <h1>Activitats RSS</h1>
     <div class="container">
         <a href="Document1.xml"><img src="../img/rss.png" width="300px"></a>
         <a href="Document2.xml"><img src="../img//atom.png" width="300px"></a>
